не тот файл выложила

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,44 +34,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ВЫДАТЬ', 'САНКЦИЯ'),\n",
+       " ('ПРИНЯТЬ', 'РЕШЕНИЕ'),\n",
+       " ('УДОВЛЕТВОРИТЬ', 'ХОДАТАЙСТВО'),\n",
+       " ('УДОВЛЕТВОРИТЬ', 'ИСК'),\n",
+       " ('НАЛОЖИТЬ', 'АРЕСТ'),\n",
+       " ('ПРИЗНАТЬ', 'ВИНОВНАЯ'),\n",
+       " ('САНКЦИОНИРОВАТЬ', 'АРЕСТ'),\n",
+       " ('ОТКАЗАТЬ', 'УДОВЛЕТВОРЕНИЕ'),\n",
+       " ('ОСВОБОДИТЬ', 'ЗАЛОГ'),\n",
+       " ('ПРОЙТИ', 'ПРЕНИЕ')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "finder = BigramCollocationFinder.from_documents(file_parsed)\n",
     "\n",
     "#finder.apply_word_filter(lambda w: w in verbs)\n",
     "\n",
-    "results_likelihood = finder.nbest(bigram_measures.likelihood_ratio, 10)"
+    "results_likelihood = finder.nbest(bigram_measures.likelihood_ratio, 10)\n",
+    "results_likelihood"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('АДРЕСОВАТЬ', 'МНЕНИЕ'),\n",
+       " ('АССОЦИИРОВАТЬСЬ', 'БОЛЬШОЙ'),\n",
+       " ('ВКЛЮЧИТЬ', 'РЕЕСТР'),\n",
+       " ('ВОЗГЛАВИТЬ', 'СПИСОК'),\n",
+       " ('ВОЗЛОЖИТЬ', 'ВОЗМЕЩЕНИЕ'),\n",
+       " ('ВЫПЛАТИТЬ', 'ЖИТЕЛЬ'),\n",
+       " ('ВЫПЛАЧИВАТЬ', 'СЧЕТ'),\n",
+       " ('ВЫПОЛНЯТЬ', 'УСЛОВИЕ'),\n",
+       " ('ВЫПУСТИТЬ', 'КЛЕТКА'),\n",
+       " ('ВЫСКАЗАТЬ', 'НЕСОГЛАСИЕ')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results_chi = finder.nbest(bigram_measures.chi_sq, 10)"
+    "results_chi = finder.nbest(bigram_measures.chi_sq, 10)\n",
+    "results_chi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('УДОВЛЕТВОРИТЬ', 'ИСК'),\n",
+       " ('ПРИНЯТЬ', 'РЕШЕНИЕ'),\n",
+       " ('УДОВЛЕТВОРИТЬ', 'ХОДАТАЙСТВО'),\n",
+       " ('ВЫДАТЬ', 'САНКЦИЯ'),\n",
+       " ('ПРИЗНАТЬ', 'ВИНОВНАЯ'),\n",
+       " ('ВЫНЕСТИ', 'РЕШЕНИЕ'),\n",
+       " ('НАЛОЖИТЬ', 'АРЕСТ'),\n",
+       " ('САНКЦИОНИРОВАТЬ', 'АРЕСТ'),\n",
+       " ('ОТКАЗАТЬ', 'УДОВЛЕТВОРЕНИЕ'),\n",
+       " ('ПРИЗНАТЬ', 'ПРАВОТА')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results_student = finder.nbest(bigram_measures.student_t, 10)"
+    "results_student = finder.nbest(bigram_measures.student_t, 10)\n",
+    "results_student"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +175,7 @@
        "-1.1714285714285713"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +197,7 @@
        "0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -153,16 +216,26 @@
     {
      "data": {
       "text/plain": [
-       "-1.1714285714285713"
+       "-0.5833333333333333"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spearman_correlation(ranks_from_sequence(results_list),ranks_from_sequence(results_likelihood))"
+    "spearman_correlation(ranks_from_sequence(results_list),ranks_from_sequence(results_student))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В рамках выполнения данного задания я использовала биграммы. Из данных с помощь классовых методов, всторенных в nltk  (хи квадрат, тест стьюдента, вероятность) педсказывались самые типичные биграммы. Псоле этого с помощью теста корреляции Спирмана была найдена корреляция междк составленным вручную \"золотым стандартом\" и полученными биграммами.\n",
+    "Интересно, что в одном из примеров корреляция больше 1 (то есть тест как-то не так работает?)\n",
+    "Тест стьюдента сраотал лучше всего, но корреляция все равно не слишком высокая\n",
+    "Интересно было, что и как покажет Хи квадрат, показательно, что у него корреляция нулевая."
    ]
   }
  ],
